[project]
name = "lilgrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "pyvis>=0.3.2",
    "streamlit>=1.48.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
